# rust-magiccrypt

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: ci-version.yml  ci.yml
src/: errors.rs  functions.rs  lib.rs  macros.rs  secure_bit.rs  traits.rs
src/ciphers/: aes128.rs  aes192.rs  aes256.rs  des64.rs  mod.rs
tests/: basic.rs  no_std.rs  stream.rs  test.rs
