[package]
name = "magic-crypt"
version = "5.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/magiclen/rust-magiccrypt"
homepage = "https://magiclen.org/aes"
keywords = ["crypto", "aes", "des", "encrypt", "decrypt"]
categories = ["no-std" ,"algorithms", "cryptography"]
description = "MagicCrypt is a Java/PHP/NodeJS/Rust library to encrypt/decrypt strings, files, or data, using Data Encryption Standard(DES) or Advanced Encryption Standard(AES) algorithms. It supports CBC block cipher mode, PKCS7 padding and 64, 128, 192 or 256-bits key length."
license = "Apache-2.0"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
cbc = { version = "0.2", features = ["alloc", "zeroize"] }
des = "0.9"
aes = "0.9"
md-5 = "0.11"
tiger = "0.3"
sha2 = "0.11"
crc-any = "3"
zeroize = { version = "1.8.1", default-features = false }

[features]
default = ["std"]
std = ["base64/std"]
